--- a/assets/modules/egal/widget 2.html
+++ b/assets/modules/egal/widget 2.html
@@ -25,9 +25,9 @@
     <!-- Bootstrap styles -->
     <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">-->
     <!-- Generic page styles -->
-    <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/style.css">
     <!-- blueimp Gallery styles -->
-    <!--<link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">-->
+    <link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
     <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
     <!--<link rel="stylesheet" href="css/jquery.fileupload.css">-->
     <!--<link rel="stylesheet" href="css/jquery.fileupload-ui.css">-->
@@ -38,7 +38,7 @@
     <noscript><link rel="stylesheet" href="css/jquery.fileupload-ui-noscript.css"></noscript>
     <link rel="stylesheet" href="css/scss.css">
 </head>
-<body style="height: 100%">
+<body>
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -60,22 +60,26 @@
     </div>
 </div>
 <div class="container">
+    <input id="size" type="range" min="70" max="544" value="100">
+    <button id="list">list</button>
     <h1>eGal</h1>
     <!--<h2 class="lead">Basic Plus UI version</h2>-->
     <form id="settings" class="details form-inline1">
-        <label><input class="form-control input-sm hidden1" id="pId" name="content_id" type="number" value="2"></label>
-
-        Images
-        <label>Width <input class="form-control input-sm" name="iwidth" type="number" value="1920"></label>
-        <label>Height <input class="form-control input-sm" name="iheight" type="number" value="1200"></label>
-        <label>Quality <input class="form-control input-sm" name="iquality" type="number" value="95"></label>
-
-        Thumbs
-        <label>Width <input class="form-control input-sm" name="twidth" type="number" value="200"></label>
-        <label>Height <input class="form-control input-sm" name="theight" type="number" value="120"></label>
-        <label>Quality <input class="form-control input-sm" name="tquality" type="number" value="95"></label>
+<div  style="float: left">Document ID
+   <label><input class="form-control input-sm hidden1" id="pId" name="content_id" type="number" value="2"></label>
+</div><br>
+        <div style="float: left"> Images
+            <label>Width <input class=" input-sm" name="iwidth" type="number" value="1920"></label>
+            <label>Height <input class=" input-sm" name="iheight" type="number" value="1200"></label>
+            <label>Quality <input class=" input-sm" name="iquality" type="number" value="95"></label>
+        </div><br>
+        <div style="float: left"> Thumbs
+            <label>Width <input class=" input-sm" name="twidth" type="number" value="200"></label>
+            <label>Height <input class=" input-sm" name="theight" type="number" value="120"></label>
+            <label>Quality <input class=" input-sm" name="tquality" type="number" value="95"></label>
+        </div>
     </form>
-    <br>
+
     <!-- The file upload form used as target for the file upload widget -->
     <form id="fileupload" action="//jquery-file-upload.appspot.com/" method="POST" enctype="multipart/form-data">
         <!-- Redirect browsers with JavaScript disabled to the origin page -->
@@ -226,19 +230,21 @@
 <!-- The template to display files available for download -->
 <script id="template-download" type="text/x-tmpl">
 {% for (var i=0, file; file=o.files[i]; i++) { %}
-    <li class="template-download fade">
+    <li class="template-download ">
 
             <span class="preview">
                 {% if (file.thumbsUrl) { %}
-                    <a href="{%=file.url%}" title="{%=file.name%}" download="{%=file.name%}" data-gallery><img src="{%=file.thumbsUrl%}"></a>
+                    <!-- <a href="{%=file.url%}" title="{%=file.name%}" download="{%=file.name%}" data-gallery>-->
+                    <img src="{%=file.thumbsUrl%}">
+                    <!-- </a>-->
                 {% } %}
             </span>
 
             <form class="details collapse1  no-transition">
-                <span class="size">{%=o.formatFileSize(file.size)%}</span>
-                <input name="sortorder" class="form-control hide1" type="text" value="{%=file.sortorder%}" >
+                <span class="size collapse">{%=o.formatFileSize(file.size1)%}</span>
 
-                <input name="filename" class="form-control " type="text" value="{%=file.name%}" readonly>
+
+                <input name="filename" class="form-control collapse" type="text" value="{%=file.name%}" readonly>
                 {% if (file.error) { %}
                 <div><span class="label label-danger">Error</span> {%=file.error%}</div>
                 {% } %}
@@ -247,7 +253,8 @@
                 <input name="title" class="form-control" type="text" value="{%=file.title%}" placeholder="Title">
                 <textarea name="description" class="form-control" placeholder="Description">{%=file.description%}</textarea>
                 <input name="keywords" class="form-control" type="text" value="{%=file.keywords%}" placeholder="Keywords">
-                <input name="id" class="form-control collapse1" type="text" value="{%=file.id%}" readonly>
+                <input name="sortorder" class="" type="text" value="{%=file.sortorder%}" >
+                <input name="id" class="" type="text" value="{%=file.id%}" readonly>
             </form>
 
 
@@ -260,7 +267,7 @@
                     <i class="glyphicon glyphicon-trash"></i>
                     <span>Delete</span>
                 </button>
-                <input type="checkbox" name="delete" value="1" class="toggle">
+<input type="checkbox" name="delete" value="1" class="toggle">
             {% } else { %}
                 <button class="btn btn-warning cancel">
                     <i class="glyphicon glyphicon-ban-circle"></i>
@@ -302,7 +309,8 @@
 <!-- The File Upload user interface plugin -->
 <script src="js/jquery.fileupload-ui.js"></script>
 <!--<script src="js/jquery-ui-1.10.3.custom.min.js"></script>-->
-<script src="js/Sortable.js"></script>
+<script src="js/Sortable.min.js"></script>
+<script src="js/xselectable.min.js"></script>
 <!-- The main application script -->
 <script src="js/main.js"></script>
 <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE 8 and IE 9 -->
