--- a/assets/modules/egal/widget.html
+++ b/assets/modules/egal/widget.html
@@ -58,7 +58,7 @@
         <!--<option value="50">50</option>-->
         <!--<option value="100">100</option>-->
     <!--</select>-->
-    <input id="size" type="range">
+    <input id="size" type="range" min="10">
     <!--<button id="list">list</button>-->
     <h1>eGal</h1>
     <!--<h2 class="lead">Basic Plus UI version</h2>-->
