--- a/assets/modules/egal/widget.html
+++ b/assets/modules/egal/widget.html
@@ -30,6 +30,7 @@
     <!--<link rel="stylesheet" href="css/pe-icon-7-stroke/css/pe-icon-7-stroke.css">-->
     <!--<link rel="stylesheet" href="css/pe-icon-7-stroke/css/helper.css">-->
 
+    <link rel="stylesheet" href="redactor/assets/redactor.css" />
     <!-- CSS adjustments for browsers with JavaScript disabled -->
     <noscript>
         <link rel="stylesheet" href="css/jquery.fileupload-noscript.css">
@@ -289,12 +290,14 @@
 
 <script src="magnific-popup/jquery.magnific-popup.min.js"></script>
 
+<script src="redactor/assets/redactor.min.js"></script>
 <!-- The main application script -->
 <script src="js/main.js"></script>
 <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE 8 and IE 9 -->
 <!--[if (gte IE 8)&(lt IE 10)]>
 <script src="js/cors/jquery.xdr-transport.js"></script>
 <![endif]-->
-
+<script>
+</script>
 </body>
 </html>
